<resources>
    <string name="app_name">HerbIdentification</string>
    <string name="ENG">ENG</string>
    <string name="TH">TH</string>
    <string name="balsamPearTH">มะระขี้นก</string>
        <string name="balsamPearTH_detail">\t\t\tมะระขี้นกเป็นสมุนไพรที่เกิดขึ้นได้เองตามธรรมชาติ แหล่งกำเนิดของมะระขี้นก กำเนิดมาจากแถบลาตินอเมริกา ส่วนที่มาของมะระขี้นกคือ ส่วนใหญ่นกจะชอบมาจิกกินมะระขี้นกซึ่งขึ้นเป็นเถาตามธรรมชาติ หลังจากนั้นก็จะทิ้งอุจจาระเอาไว้รอบๆต้น จึงเป็นที่มาของชื่อ มะระขี้นก นั่นเอง</string>
        <string name="balsamPearTH_benefit">\t\t\tผลช่วยต่อต้านอนุมูลอิสระ ช่วยเสริมสร้างภูมิต้านทานโรคให้กับร่างกาย  ช่วยป้องกันการหนาตัวของผนังหลอดเลือดแดง ช่วยบำบัดและรักษาโรคเบาหวาน ช่วยลดความดันโลหิต  ช่วยในการย่อยอาหารได้เป็นอย่างดี ช่วยให้เจริญอาหาร แก้อาการปากเปื่อยลอกเป็นขุย ช่วยแก้อาการร้อนในกระหายน้ำ แก้อาการจุดเสียด แน่นท้อง</string>
    <string name="curcumaTH">ขมิ้นชัน</string>
        <string name="curcumaTH_detail">\t\t\tขมิ้นเป็นพืชล้มลุกที่จัดอยู่ในตระกูลขิง มีเหง้าอยู่ใต้ดิน เนื้อในของเหง้าจะเป็นสีเหลือง มีกลิ่นหอมเฉพาะตัว มีตั้งแต่สีเหลืองเข้มจนถึงสีแสดจัด โดยถิ่นกำเนิดอยู่ในแถบเอเชียตะวันออกเฉียงใต้ และมีชื่ออื่น ๆ อีก เช่น ขมิ้นชัน ขมิ้นแกง ขมิ้นหยอก ขมิ้นหัว ขี้มิ้น หมิ้น ทั้งนี้ขึ้นอยู่กับแต่ละภาคและจังหวัดนั้น ๆ นิยมนำไปใช้ในการประกอบอาหาร แต่งสี แต่งกลิ่นอาหาร เช่น แกงไตปลา แกงกะหรี่ เป็นต้น</string>
        <string name="curcumaTH_benefit">\t\t\tเหง้าแก้อาการไข้เรื้อรัง ผอมเหลือง แก้โรคผิวหนัง แก้เสมหะและโลหิต แก้ท้องร่วง สมานแผล แก้ธาตุพิการ ขับผายลม แก้ผื่นคัน ขับกลิ่นและสิ่งสกปรกในร่างกาย คุมธาตุ หยอดตาแก้ตาบวม ตาแดง น้ำคั้นจากเหง้าสดทาแก้แผลถลอก แก้โรคผิวหนังผื่นคัน ลดอาการอักเสบ ทำให้ผิวพรรณผุดผ่อง นำมาอัดเม็ดทำเป็นยารักษาอาการท้องอืดท้องเฟ้อ ธาตุพิการ อาหารไม่ย่อย กระเพาะอาหารอ่อนแอ รักษาแผลในกระเพาะอาหาร แก้ท้องร่วง แก้บิด</string>
    <string name="fingerrootTH">กระชาย</string>
        <string name="fingerrootTH_detail">\t\t\tต้นกระชายนับว่าเป็นพืชล้มลุกชนิดหนึ่งมีความสูงประมาณ 2–3ฟุต รากอวบรูปทรงกระบอกหรือรูปไข่ค่อนข้างยาวปลายเรียวแหลมออกเป็นกระจุก มีผิวสีน้ำตาลอ่อนเนื้อใบสีเหลืองมีกลิ่นหอมเฉาะตัว ส่วนที่อยู่เหนือดินเป็นกาบใบที่หุ้มซ้อนกันเป็นชั้น ๆ สีแดงเรื่อ ๆ ใบเป็นใบเดี่ยว เรียงสลับตัวใบรูปรีปลายใบเรียวแหลม ขอบใบเรียบ เส้นกลางใบ ก้านใบและกาบใบด้านบนเป็นร่อง ด้านล่างนูนเป็นสัน ออกดอกเป็นช่อสีขาวหรือขาวอมชมพูที่ยอด (แทรกอยู่ระหว่างกาบใบ) ดอกบานทีละดอก มีลักษณะเป็นถุง ผลเป็นผลแห้งเมื่อแก่แล้ว</string>
        <string name="fingerrootTH_benefit">\t\t\tเหง้าและรากรากกระชาย แก้โรคในปากเช่นปากเปื่อย ปากเป็นแผล ปากแห้ง ขับระดูขาว ขับปัสสาวะ รักษาโรคบิด แก้ปวดมวนท้อง</string>
    <string name="limeTH">มะนาว</string>
        <string name="limeTH_detail">\t\t\tมะนาวเป็นไม้ผลชนิดหนึ่ง ผลมีรสเปรี้ยวจัด จัดอยู่ในสกุลส้ม ผลสีเขียว เมื่อสุกจัดจะเป็นสีเหลือง เปลือกบาง ภายในมีเนื้อแบ่งกลีบๆ ชุ่มน้ำมาก นับเป็นผลไม้ที่มีคุณค่า นิยมใช้เป็นเครื่องปรุงรส นอกจากนี้ยังถือว่ามีคุณค่าทางโภชนาการและทางการแพทย์ด้ว</string>
        <string name="limeTH_benefit">\t\t\tช่วยบรรเทาอาการปวดศีรษะ ช่วยแก้อาเจียน เป็นลมวิงเวียนศีรษะ เมาเหล้าได้ ช่วยรักษาโรคความดันโลหิตสูงและต่ำ ช่วยในการเจริญอาหาร แก้อาการวิงเวียนหลังคลอดบุตร แก้โรคตาแดง แก้ไข้  แก้ไข้ทับระดู มะนาวช่วยในการขับเสมหะ ช่วยแก้ไอหรืออาการไอที่มีเลือดปนออกมา ช่วยบรรเทาอาการต่อมทอนซิลอักเสบ ช่วยบรรเทาอาการเสียงแหบแห้ง ช่วยลดอาการเหงือกบวม ช่วยในการขจัดคราบบุหรี่ ช่วยบรรเทาอาการท้องอืด ท้องเฟ้อ ปวดท้อง แน่นท้อง แก้อาการท้องร่วง ช่วยรักษาโรคกระเพาะ แก้อาการปัสสาวะกะปริดกะปรอย </string>
    <string name="sesbaniaGrandifloraTH">ดอกแค</string>
        <string name="sesbaniaGrandifioraTH_detail">\t\t\tดอกแค ลักษณะของดอกคล้ายดอกถั่ว ออกดอกเป็นช่อบริเวณซอกใบ 2–3 ดอก ดอกมีกลิ่นหอม มีสีขาวหรือสีแดง มีก้านเกสรตัวผู้สีขาวอยู่ 60 อัน กลีบเลี้ยงเป็นรูประฆังหรือรูปถ้วย</string>
        <string name="sesbeniaGrandifioraTH_benefit">\t\t\tอุดมไปด้วยวิตามินซึ่งมีส่วนช่วยต่อต้านและยับยั้งมะเร็ง เพราะมีสารที่มีฤทธิ์ช่วยยับยั้งการก่อกลายพันธุ์ สามารถช่วยลดความเสี่ยงของการเกิดโรคมะเร็งได้เป็นอย่างดี ช่วยเสริมสร้างภูมิคุ้มกันให้กับร่างกาย ช่วยป้องกันและรักษาอาการหวัด ช่วยดับพิษร้อนในร่างกาย แก้ร้อนใน กระหายน้ำ</string>
    <string name="tamarindTH">มะขาม</string>
        <string name="tamarindTH_detail">\t\t\tมะขาม คือ ไม้พันธุ์ยืนต้นที่มีขนาดกลางจนถึงขนาดใหญ่  มีใบเขียวทั้งปี ปลูกง่าย ทนทานต่อลมพายุไม่หักโค่นง่าย ผลเป็นฝักยาวโค้งงอคอดเป็นข้อ เปลือกฝักแข็ง และเปราะ เนื้อในฝักมีรสเปรี้ยว แต่ผลสุก บางพันธุ์มีรสหวาน นิยมใช้ในการปรุงอาหาร โดยฝักอ่อนจะมีสีเขียวอมเทา ส่วนฝักที่แก่แล้วจะมีสีน้ำตาลเข้ม กรอบหักง่าย</string>
        <string name="tamarindTH_benefit">\t\t\tมะขามช่วยเสริมสร้างภูมิต้านทานโรคให้แก่ร่างกายด้วยสารต่อต้านอนุมูลอิสระ ช่วยบำรุงผิวพรรณให้เปล่งปลั่งสดใสด้วยวิตามินซีและช่วยในการชะลอวัยและการเกิดริ้วรอยแห่งวัย</string>
    <string name="thaiEggplantTH">มะเขือเปราะม่วง</string>
        <string name="thaiEggplantTH_detail">\t\t\tมะเขือเปราะเป็นพืชล้มลุก ทรงพุ่มขนาดเล็ก ลำต้นตั้งตรง สีเขียว ผิวเรียบ ไม่มียาง มีรากเป็นรากแก้ว ทรงกลม สีน้ำตาล แทงลงดิน ส่วนใบเป็นใบเดี่ยว สีเขียว ทรงหัวลูกศร ปลายแหลม โคนโค้งมนคล้ายติ่งหู กว้างประมาณ 4 เซนติเมตร ยาวประมาณ 13 เซนติเมตร  มีดอกออกตามซอกใบ สีม่วงบ้าง สีขาวบ้าง โดยกลีบดอกจะเชื่อมติดกัน แต่ปลายดอกจะแยกออกเป็น 5 แฉก รูปกงล้อ ไม่มีกลิ่น</string>
        <string name="thaiEggplantTH_benefit">\t\t\tผลมะเขือเปราะช่วยลดไข้ ลดการอักเสบ ลดความดันเลือด ลดระดับน้ำตาลในเลือด ลดการบีบตัวของกล้ามเนื้อเรียบ กระตุ้นการเผาผลาญกระตุ้นการขับถ่าย ช่วยขับพยาธิ รักษาเบาหวาน ต้านมะเร็ง และช่วยบำรุงหัวใจได้</string>
    <string name="turkeyBerryTH">มะเขือพวง</string>
        <string name="turkeyBerryTH_detail">\t\t\tมะเขือพวง เป็นพืชตระกูลมะเขือ เป็นไม้ข้ามปี มีถิ่นกำเนิดในแถบรัฐฟลอริดา, หมู่เกาะเวสต์ อินดีส์, เม็กซิโก จนถึงอเมริกากลาง และทวีปอเมริกาใต้แถบประเทศบราซิล เป็นวัชพืชขึ้นกระจัดกระจายเกือบทั่วเขตร้อน</string>
        <string name="turkeyBerryTH_benefit">\t\t\tผลของมะเขือพวงมีรสขื่น เฝื่อน อมเปรี้ยวเล็กน้อย หลายประเทศนำผลมาต้มน้ำกรองน้ำดื่ม มีสรรพคุณในการขับเสมหะ ช่วยระบบย่อยอาหาร รักษาอาการเบาหวาน / ประเทศจีนใช้ต้มน้ำดื่มแก้ไอและบำรุงเลือด ทำให้ภูมิคุ้มกันแข็งแรง ผลแห้งย่างกินแกล้มอาหารบำรุงสายตาและรักษาอาการติดเชื้อแบคทีเรีย / อินเดียกินผลเพื่อบำรุงตับ ช่วยบรรเทาโรคแผลในกระเพาะอาหาร ขับปัสสาวะ ช่วยย่อย และช่วยให้ผ่อนคลายง่วงนอน บำรุงตับ / อินเดียทางตอนใต้ใช้ผลอ่อนบำรุงกำลังให้ร่างกาย ผลแห้งหุงน้ำมันเล็กน้อย บดเป็นผงกินครั้งละ 1 ช้อนชา ลดอาการไอและเสมหะ / และแคเมอรูนใช้ผลมะเขือพวงรักษาโรคความดันโลหิตสูง</string>
    <string name="eggplantTH">มะเขือม่วง</string>
        <string name="eggplantTH_detail">\t\t\tเป็นมะเขืออีกชนิดที่มีความกรอบ และมีรสหวาน คล้ายกับมะเขือเปราะ แต่ต่างที่ผลมีสีม่วง และพันธุ์ที่ปลูกส่วนมากมีลักษณะเรียวยาว นิยมทั้งรับประทานสด และนำไปประกอบอาหาร โดยเฉพาะในทวีปอเมริกา และยุโรปที่นิยมรับประทานอย่างมาก ส่วนในเอเชียประเทศที่นิยมรับประทาน และไทยส่งออกให้มากที่สุด คือ ญี่ปุ่น ส่วนประเทศไทยยังไม่เป็นที่นิยม</string>
        <string name="eggplantTH_benefit">\t\t\tผลช่วยบรรเทาอาการไข้ ช่วยต้านเซลล์มะเร็ง ป้องกันการเกิดลำไส้ บำรุงกำลัง บำรุงร่างกาย ช่วยบำรุงเลือด ช่วยบำรุงหัวใจ รักษาต่อมน้ำนมอักเสบ</string>
    <string name="lemonGrassTH">ตะไคร้</string>
        <string name="lemonGrassTH_detail">\t\t\tตะไคร้ มีชื่อท้องถิ่น จะไคร, หัวซิงไค, ไคร, คาหอม, เชิดเกรย, เหลอะเกรย, ห่อวอตะโป่ เป็นพืชล้มลุก ในวงศ์หญ้า ความสูงประมาณ 4–6 ฟุต ใบยาวเรียว ปลายใบมีขนหนาม ลำต้นรวมกันเป็นกอ มีกลิ่นหอม เป็นช่อยาวมีดอกเล็กฝอยเป็นจำนวนมาก ตะไคร้เป็นพืชที่สามารถนำส่วนต้นหัวไปประกอบอาหาร และจัดเป็นพืชสมุนไพรด้วย</string>
        <string name="lemonGrassTH_benefit">\t\t\t ลำต้น และใบ ช่วยบรรเทา และรักษาอาการไข้หวัด แก้ไอ และช่วยขับเสมหะ บรรเทาอาการโรคหืดหอบ รักษาอาการปวดท้อง ช่วยขับปัสสาวะ แก้ปัสสาวะยาก ช่วยขับเหงื่อ</string>
    <string name="kaffirLimeTH">มะกรูด</string>
        <string name="kaffirLimeTH_detail">\t\t\tมะกรูด เป็นพืชในสกุลส้ม มีถิ่นกำเนิดในประเทศลาว อินโดนีเซีย มาเลเซีย และไทย ในเอเชียตะวันออกเฉียงใต้ นิยมใช้ใบมะกรูดและผิวมะกรูดเป็นส่วนหนึ่งของเครื่องปรุงอาหารหลายชนิด นอกจากในประเทศไทยและลาวแล้ว ยังมีความนิยมในกัมพูชา เวียดนาม มาเลเซีย และอินโดนีเซีย</string>
        <string name="kaffirLimeTH_benefit">\t\t\t ผลมะกรูด ช่วยแก้อาการไอ ขับเสมหะ โดยการนำมะกรูดผ่าครึ่งและนำไปลนไฟให้นิ่ม แล้วค่อย ๆ บีบน้ำมะกรูดลงคอทีละนิดจะช่วยทำให้อาการบรรเทาลงได้ ช่วยฟอกโลหิต โดยนำผลมะกรูดสดมาผ่าเป็น 2 ซีกแล้วนำไปดองกับเกลือหรือน้ำผึ้งประมาณ 1 เดือน แล้วรินเอาแต่น้ำดื่ม ช่วยแก้อาการปวดท้อง หรือใช้เป็นยาแก้ปวดท้องในเด็กอ่อน โดยการนำผลมะกรูดมาคว้านไส้กลางออก นำมหาหิงคุ์ใส่และปิดจุก แล้วนำไปเผาไฟจนดำเกรียมและบดจนเป็นผงละลายกับน้ำผึ้งไว้รับประทานแก้อาการปวดได้</string>
    <string name="gotuKolaTH">บัวบก</string>
        <string name="gotuKolaTH_detail">\t\t\tบัวบก เป็นพืชสมุนไพรที่อยู่ในแถบเอเชีย ใบบัวบกสามารถช่วยรักษาแผลให้หายได้เร็วขึ้นและยังช่วยลดอาการอักเสบของแผลได้ดี เพราะมีกรดมาเดคาสสิก กรดอะเซียติก และสารอะเซียติโคไซด์ ยาแผนปัจจุบันทำเป็นรูปครีมผงโรยแผล ยาเม็ดรับประทาน เพื่อใช้รักษาแผลสดและแผลผ่าตัด ไม่ว่าจะเป็นแผลไฟไหม้ หรือแผลฝีหนองหรือแผลสด โดยใช้ใบและต้นสดตำละเอียดคั้นน้ำทานวันละ 3 – 4 ครั้ง หรืออาจใช้กากพอกบริเวณแผลด้วย</string>
        <string name="gotuKolaTH_benefit">\t\t\tบัวบกเป็นพืชที่มีแคลเซียมในระดับปานกลางถึงสูง แต่มีระดับสารออกซาเลตที่เป็นอันตรายต่อร่างกายในปริมาณต่ำ ใบบัวบกช่วยคืนความอ่อนเยาว์ ย้อนอายุและวัย ใช้เป็นยาอายุวัฒนะ ช่วยเสริมสร้างและกระตุ้นการสร้างคอลลาเจนและอีลาสติน มีสารต่อต้านอนุมูลอิสระ ช่วยต่อต้านการเสื่อมของเซลล์ต่าง ๆในร่างกาย ช่วยบำรุงและรักษาสายตา ฟื้นฟูรอบดวงตา เพราะบัวบกมีวิตามินเอสูง ช่วยรักษาอาการตาอักเสบบวมแดง ด้วยการใช้ใบบัวบกล้างน้ำสะอาด คั้นเอาแต่น้ำนำมาหยดที่ตา 3–4 ครั้งต่อวัน</string>
    <string name="amlaTH">มะขามป้อม</string>
        <string name="amlaTH_detail">\t\t\tมะขามป้อม หรือ มะขามป้อมอินเดีย เป็นต้นไม้ยืนต้นชนิดหนึ่ง อยู่ในวงศ์ Phyllanthaceae เป็นผลไม้ที่มีวิตามินซีสูง และมีคุณค่าทางสมุนไพรด้วย มะขามป้อมเป็นต้นไม้ประจำจังหวัดสระแก้ว มีชื่อพื้นเมืองอื่นอีกคือ กันโตด กำทวด มะขามป้อม มั่งลู่, สันยาส่า</string>
        <string name="amlaTH_benefit">\t\t\tผล นำมาทานหรือคั้นเป็นน้ำดื่มแก้อาการท้องเสีย แก้กระหาย แก้หวัด แก้ไอ ช่วยละลายเสมหะ  ช่วยขับปัสสาวะ ช่วยรักษาโรคบิด ช่วยรักษาเลือดออกตามไรฟัน เป็นยาระบาย เป็นยาถ่ายพยาธิ และใช้ล้างตาแก้ตาแดงได้ </string>
    <string name="pandanTH">เตยหอม</string>
        <string name="pandanTH_detail">\t\t\tเตยหอม เป็นไม้ยืนต้นพุ่มเล็ก ขึ้นเป็นกอ ใบเป็นใบเดี่ยว เรียงสลับเวียนเป็นเกลียวขึ้นไปจนถึงยอด ใบเป็นทางยาว สีเข้ม เป็นมันเผือก ขอบใบเรียบ​ แต่ใบบางต้นอาจมีหนาม ในใบมีกลิ่นหอมจากน้ำมันหอมระเหย Fragrant Screw Pine สีเขียวจากใบเป็นสีของคลอโรฟิลล์ ใช้แต่งสีขนมได้</string>
        <string name="pandanTH_benefit">\t\t\tใบเตย แก้อาการเป็นไข้ ช่วยให้ร่างกายสดชื่น ช่วยฟื้นฟูร่างกายจากอาการบาดเจ็บหรือหลังจากการหายป่วย แก้อาการท้องอืด อาหารไม่ย่อย แก้ร้อนใน แก้กระหายน้ำ แก้อ่อนเพลีย ช่วยขับปัสสาวะ บำรุงหัวใจ ชูกำลัง</string>
    <string name="sweetBasilTH">โหระพา</string>
        <string name="sweetBasilTH_detail">\t\t\tโหระพา เป็นไม้ล้มลุก สูง 0.5–1 เมตร ลำต้นเป็นสี่เหลี่ยมมีกิ่งอ่อนสีม่วงแดง ใบเป็นใบเดี่ยวออกตรงข้าม รูปไข่หรือรูปรีกว้าง 3–4 เซนติเมตร ยาว 4–6 เซนติเมตร ปลายแหลม โคนมน ขอบจะเป็นฟันเลื่อยห่าง ๆ ดอกสีขาวหรือชมพูอ่อน ออกเป็นช่อที่ปลายกิ่งยาว 7–12 เซนติเมตร ใบประดับสีเขียวอมม่วงจะคงอยู่เมื่อเป็นผล กลีบดอกโคนเชื่อมกัน</string>
        <string name="sweetBasilTH_benefit">\t\t\tแก้ปวดฟัน ช่วยให้เจริญอาหาร แก้ปวดหัว แก้หวัด แก้ไอ ช่วยย่อยอาหาร แก้ท้องอืด-ท้องเฟ้อ</string>
    <string name="holyBasilTH">กะเพรา</string>
        <string name="holyBasilTH_detail">\t\t\tกะเพรา เป็นไม้ล้มลุก แตกกิ่งก้านสาขา สูง 60–120 เซนติเมตร นิยมนำใบมาประกอบอาหารคือ ผัดกะเพรา กะเพรามี 3 พันธุ์ คือ กะเพราแดง กะเพราขาว และ กะเพราลูกผสมระหว่างกะเพราแดงและกะเพราขาว</string>
        <string name="holyBasilTH_benefit">\t\t\tลดอาการท้องอืดเฟ้อ ขับลม แก้ปวดท้อง บำรุงธาตุ ขับผายลม แก้อาการจุกเสียดในท้อง ทำให้เรอ แก้ท้องร่วง แก้คลื่นไส้อาเจียน ช่วยขับเสมหะ ขับเหงื่อ</string>
    <string name="gingerTH">ขิง</string>
    <string name="benefit_herbTH">สรรพคุณ</string>
    <string name="search_herbENG">Search Herb</string>
    <string name="button_text_cameraENG">Take Picture</string>
    <string name="button_text_galleryENG">Pick Picture</string>
</resources>