<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="18dp">

            <ImageView
                android:id="@+id/detail_imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                tools:src="@drawable/curcuma" />

            <TextView
                android:id="@+id/detail_textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="@string/fingerrootTH" />

            <TextView
                android:id="@+id/detail_textview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/fingerrootTH_detail" />

            <TextView
                android:id="@+id/detail_textview_benefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/benefit_herbTH" />

            <TextView
                android:id="@+id/detail_textview_benefit_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/fingerrootTH_benefit" />
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>