<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
            <Button
                android:id="@+id/button_bar"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/TH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edittext_search"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_herbENG"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundList"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_herb"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/herb_list"
            tools:itemCount="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:background="@color/colorButtonBackground"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_camera"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center">

                    <ImageView
                        android:src="@drawable/ic_camera"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                    <TextView
                        android:id="@+id/textview_camera_button"
                        android:text="@string/button_text_cameraENG"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginStart="2dp"
                android:background="@color/colorButtonBackground"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_gallery"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center">

                    <ImageView
                        android:src="@drawable/ic_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>

                    <TextView
                        android:id="@+id/textview_gallery_button"
                        android:text="@string/button_text_galleryENG"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>